--- a/styles.css
+++ b/styles.css
@@ -3,32 +3,31 @@
   src: url(./styles\ complements/Roboto/Roboto-Regular.ttf);
 }
 html {
-  background-color:white;
+  background-color: white;
   font-family: "myRoboto";
-  color: #6B708D;
-
+  color: #6b708d;
 }
-h1{
-  font-size:60px;
-  font-weight: bold;
-  color:#292E47;
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:30 px;
+  font-weight:900px;;
+  color: #292e47;
 }
 h2 {
-  font-size:50px;
+  font-size: 8vh;
   font-weight: bold;
-  color:#292E47;
+  color: #292e47;
 }
 h3 {
-  font-size:40px;
+  font-size: 6vh;
   font-weight: bold;
-  color:#292E47;
-  }
+  color: #292e47;
+}
 h4 {
-  font-size: 24px;
+  font-size: 4vh;
   font-weight: bold;
-  color:#292E47;
-}  
-
+  color: #292e47;
+}
 
 nav {
   display: flex;
@@ -39,77 +38,101 @@ nav {
   padding-right: 10%;
 }
 
-
-nav div{
+nav div {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   padding: 0px;
   gap: 20px;
 }
-.navMenu{
-
+.navMenu {
   text-decoration: none;
   display: inline-block;
-  color: #292E47;
+  color: #292e47;
   font: size 17px;
-  font-weight:500px;
+  font-weight: medium;
   line-height: 22px;
   padding: 0px 5px 0px 5px;
- 
 }
-.navMenu:hover { 
-  color:#072ac8
- }
- 
+.navMenu:hover {
+  color: #072ac8;
+}
+
 .std-button {
-color:white;
-box-sizing: border-box;
-background-color: #072ac8;
-text-decoration: none;
-display: inline-block;
-padding: 15px 35px 15px 35px
+  color: white;
+  box-sizing: border-box;
+  background-color: #072ac8;
+  text-decoration: none;
+  display: inline-block;
+  padding: 15px 35px 15px 35px;
 }
 
 .std-button:hover {
-  background-color:#292E47;
-
+  background-color: #292e47;
+}
+#hero-flexcontainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 15px;
+  margin-left: 15%;
+  margin-right:15%;
+  height: auto;
+  
 }
 .hero-btns1 {
-  color: #292E47;
+  color: #292e47;
+  font-size: 17px;
+  font-weight: medium;
   text-decoration: none;
   box-sizing: border-box;
   display: inline-block;
+  padding: 15px 35px 15px 35px;
 }
-#hero {
-  position: absolute;
-  min-height: 400px;
+
+#hero-intro-flexitem {
+
+  flex:auto;
+
 }
-#hero-intro {
-  height: 800px;
-  width: 50%;
-  box-sizing: border-box;
- display: flex;
- flex-direction: column;
+
+.text-Content {
+  font-size: 17px;
+  line-height: 25px;
+  font-weight: normal;
+  color: #6b708d;
+  text-align: left;
+ 
+}
+#hero-img-flexitem{
+  flex:auto;
 }
 #hero-img {
-  height: 600px;;
-  width:50%;
+  flex:auto;
+  min-height: 500px;
+  width: 35%;
   box-sizing: border-box;
-  display: flexbox;
-  flex-direction: column;
+  background-image: url(./imagenes/hero-image.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  
 }
-.heroimg {
-  height: 400px;
-  width:auto
-  image-rendering: auto;
-}
- .card-1 {
-   height: 150px;
-   width:auto;
- }
+
+/*.card-1 {
+  height:50%;
+  min-width: auto;
+  float:left;
+  margin-left: -65px;
+  margin-top: -35px;
+  border:blue 2px solid;
  
- .card-2 {
-  height: 150px;
-  width:auto;
- }
+}
+
+.card-2 {
+  height: 50%;
+  min-width: auto;
+  float:right;
+  margin-right: -75px;
+  margin-top: 60%;
+  border:blue 2px solid;
+}*/
