--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,34 @@
-@font-face {
-  font-family: myRoboto;
-  src: url(./styles\ complements/Roboto/Roboto-Regular.ttf);
-}
 html {
-  background-color: white;
-  font-family: "myRoboto";
+  background-color: #f2f4f6;
+  font-family: "Roboto", sans-serif;
   color: #6b708d;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size:30 px;
-  font-weight:900px;;
+  font-size: 60px;
+  font-weight: 900px;
   color: #292e47;
 }
 h2 {
-  font-size: 8vh;
-  font-weight: bold;
+  font-size: 50px;
   color: #292e47;
 }
 h3 {
-  font-size: 6vh;
-  font-weight: bold;
+  font-size: 40px;
   color: #292e47;
+  font-weight: bold;
 }
 h4 {
-  font-size: 4vh;
-  font-weight: bold;
+  font-size: 24px;
   color: #292e47;
+  font-weight: bold;
 }
-
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
-  padding-left: 10%;
-  padding-right: 10%;
+  height: 200px;
 }
 
 nav div {
@@ -49,7 +42,7 @@ nav div {
   text-decoration: none;
   display: inline-block;
   color: #292e47;
-  font: size 17px;
+  font-size: 17px;
   font-weight: medium;
   line-height: 22px;
   padding: 0px 5px 0px 5px;
@@ -70,16 +63,14 @@ nav div {
 .std-button:hover {
   background-color: #292e47;
 }
-#hero-flexcontainer {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin-top: 15px;
-  margin-left: 15%;
-  margin-right:15%;
-  height: auto;
-  
+
+.hero-container {
+  padding-top: 5%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
 }
+
 .hero-btns1 {
   color: #292e47;
   font-size: 17px;
@@ -90,49 +81,208 @@ nav div {
   padding: 15px 35px 15px 35px;
 }
 
-#hero-intro-flexitem {
-
-  flex:auto;
-
+.hero-intro {
+  display: flex;
+  flex-direction: column;
 }
-
 .text-Content {
-  font-size: 17px;
+  font-size: 20px;
   line-height: 25px;
   font-weight: normal;
   color: #6b708d;
   text-align: left;
- 
 }
-#hero-img-flexitem{
-  flex:auto;
-}
-#hero-img {
-  flex:auto;
-  min-height: 500px;
-  width: 35%;
-  box-sizing: border-box;
-  background-image: url(./imagenes/hero-image.png);
-  background-size: 100%;
+#hero-imagBox {
+  min-height: 600px;
+
+  background-image: url("./imagenes/hero-image.png");
   background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+}
+
+/* .card-1 {
+height:300px;
+float: left;
+}
+.card-2 {
+height: 35% ;
+float:right;
+  
+} */
+
+.logos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-bottom: 20%;
+  padding-top: 10%;
+}
+.recentProject-container {
+  height: fit-content;
+  width: 100%;
+
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.post-box-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 40px;
+}
+
+.post img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+.postContent {
+  background-color: white;
+  padding: 20% 20% 20% 10%;
+}
+.post-box-grid a {
+  text-decoration: none;
+  color: #072ac8;
+  font-weight: bold;
+}
+
+.testimony {
+  background-color: #292e47;
+  width: 120%;
+  min-height: min-content;
+  margin-left: -10%;
+  margin-top: 20%;
+  background-image: url("./imagenes/testimonial-section/orbit.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  /*grid instructions*/
+
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 3;
+  gap: 2px;
+}
+.person_testimony_flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  grid-column: 2;
+  grid-row: 3;
+}
+.person_testimony_flex p {
+  align-content: left;
+  line-height: 5px;
+  font-weight: 100;
+  margin-left: 10px;
+}
+.name_headline {
+  color: #d1edff;
+  font-size: 17px;
+}
+.company_name {
+  color: white;
+  font-size: 15px;
+  font-weight: 100;
+}
+.person_img {
+  height: 50px;
+  width: 50px;
+  border-radius: 25px;
+}
+.emoji1 {
+  height: 150px;
+  grid-column: 1;
+  grid-row: 1 / 2;
+  align-self: center;
+  justify-self: center;
+}
+
+.emoji2 {
+  height: 150px;
+  grid-column: 1;
+  grid-row: 3 / 2;
+  align-self: center;
+  justify-self: center;
+}
+
+.emoji3 {
+  height: 150px;
+  grid-column: 3;
+  grid-row: 1/2;
+  align-self: center;
+  justify-self: center;
+}
+
+.emoji4 {
+  height: 150px;
+  grid-column: 3;
+  grid-row: 3/2;
+  align-self: center;
+  justify-self: center;
+}
+.testimonybox_flex{
+  display:flex;
+  height: 500px;
+  flex-direction: column; 
+  justify-content: space-around;
+  grid-column: 2;
+  grid-row: 1/ 3;
+}
+.testimonybox_flex h3 {
+  color: white;
+  text-align: center;
+ 
+
+}
+.testimonybox_flex {
+  color: #ffc600;
+  text-align: center;
+  font-size: 25px;
+  line-height: 40px;
+  
   
 }
+.services_grid{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 
-/*.card-1 {
-  height:50%;
-  min-width: auto;
-  float:left;
-  margin-left: -65px;
-  margin-top: -35px;
-  border:blue 2px solid;
- 
 }
 
-.card-2 {
-  height: 50%;
-  min-width: auto;
-  float:right;
-  margin-right: -75px;
-  margin-top: 60%;
-  border:blue 2px solid;
-}*/
+/* Versión mobile */
+
+@media (max-width: 700px) {
+  .hero-container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .logos {
+    flex-direction: column;
+    
+  }
+
+  .post-box-grid {
+    grid-template-columns: 1fr;
+   
+  
+  }
+
+  .testimony {
+    grid-template-columns: 1fr;
+  }
+  .emoji1 {
+    display: none;
+  }
+  .emoji2 {
+    display: none;
+  }
+  .emoji3 {
+    display: none;
+  }
+  .emoji4 {
+    display: none;
+  }
+}
