--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,9 @@ html {
   background-color: #f2f4f6;
   font-family: "Roboto", sans-serif;
   color: #6b708d;
-  margin-left: 20%;
-  margin-right: 20%;
+  width: min(100% - 6rem, 1000px);
+  margin-inline: auto;
+  
 }
 h1 {
   font-size: 60px;
@@ -112,24 +113,29 @@ float:right;
 } */
 
 .logos {
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding-bottom: 20%;
-  padding-top: 10%;
+  padding-top: 10%; */
+  margin-top: 10%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
+  grid-auto-rows: 5rem;
+  column-gap: 2rem;
 }
-.recentProject-container {
-  height: fit-content;
-  width: 100%;
 
+.recentProject-container {
   display: flex;
   flex-wrap: wrap;
+  width: 110%;
+  margin-inline: auto;
 }
 
 .post-box-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 40px;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  column-gap: 5rem;
 }
 
 .post img {
@@ -138,13 +144,18 @@ float:right;
   object-fit: cover;
 }
 .postContent {
+
   background-color: white;
-  padding: 20% 20% 20% 10%;
+  height: 300px;
+  padding: 10%;
+  
 }
 .post-box-grid a {
   text-decoration: none;
   color: #072ac8;
   font-weight: bold;
+
+  
 }
 
 .testimony {
@@ -223,10 +234,10 @@ float:right;
   align-self: center;
   justify-self: center;
 }
-.testimonybox_flex{
-  display:flex;
+.testimonybox_flex {
+  display: flex;
   height: 500px;
-  flex-direction: column; 
+  flex-direction: column;
   justify-content: space-around;
   grid-column: 2;
   grid-row: 1/ 3;
@@ -234,21 +245,244 @@ float:right;
 .testimonybox_flex h3 {
   color: white;
   text-align: center;
- 
-
 }
 .testimonybox_flex {
   color: #ffc600;
   text-align: center;
   font-size: 25px;
   line-height: 40px;
-  
-  
 }
-.services_grid{
+.our-services_container {
+  margin-top: 20%;
+  width: 100%;
+}
+.services_grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-auto-rows: 22rem;
+  gap: 30px;
+  margin: auto;
+}
+.services_flex {
+  height: 350px;
+  padding-left: 5%;
+  padding-right: 5%;
+  border: 2px solid black;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.imag_pen {
+  margin-top: 5%;
+  background: #d1edff;
+  height: 20%;
+  width: 20%;
+  border-radius: 50%;
+}
+.imag_pen {
+  background-image: url("/imagenes/services-section/icons/1.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.imag_arrow {
+  margin-top: 5%;
+  background: #d1edff;
+  height: 20%;
+  width: 20%;
+  border-radius: 50%;
+}
+.imag_arrow {
+  background-image: url("/imagenes/services-section/icons/2.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.imag_tech {
+  margin-top: 5%;
+  background: #d1edff;
+  height: 20%;
+  width: 20%;
+  border-radius: 50%;
+}
+.imag_tech {
+  background-image: url("/imagenes/services-section/icons/3.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.service-btn {
+  text-decoration: none;
+  color: #072ac8;
+  font-weight: bold;
+}
+.services1 {
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  text-align: left;
+  line-height: 25px;
+}
+#newsletters {
+  background-color: #ffc600;
+  width: min(130%, 1100px);
+  margin-left: -10%;
+  height: 450px;
+  margin-top: 20%;
+  margin-bottom: 10%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+ 
+}
+
+/* #newsletters {
+
+  margin-inline: auto;
+} */
+
+#subscribe-button {
+  color: white;
+  box-sizing: border-box;
+  background-color: #072ac8;
+  text-decoration: none;
+  /* display: inline-block; */
+  padding: 15px 35px 15px 35px;
+  border: none;
+}
+
+#subscribe-button:hover {
+  background-color: #292e47;
+}
+
+.subscribe_form {
+  border: 1px solid #d7d7d7;
+  padding: 4px;
+}
+.form {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+input.input-field {
+  border: 0px;
+  width: 240px;
+  position: relative;
+  outline: none;
+  bottom: 8px;
+  padding: 2px;
+}
+
+input.img-envelope {
+  width: 20px;
+  border: 0px;
+  position: relative;
+  top: -2px;
+}
+
+.formContainer {
+  background: white;
+  height: 15px;
+  width: 270px;
+  /* margin: auto; */
+  padding: 15px 35px 15px 35px;
+}
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 200px;
+}
+
+.menu-footer a {
+  text-decoration: none;
+  display: inline-block;
+  color: #072ac8;
+  font-size: 17px;
+  font-weight: medium;
+  line-height: 22px;
+  padding: 0px 5px 0px 5px;
+}
+div.menu-footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-row: 2;
+  gap: 2px;
+}
+/* Project page */
 
+.acticle-container {
+  width: 600px;
+  min-height: 450 px;
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
+  
+  
+
+}
+#contact-form {
+  width: 825px;
+  height: auto;
+  padding: 10px;
+  margin: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+#contact-form ::placeholder {
+  color: #292e47;
+}
+
+#fullName {
+  background-color: #d1d3db;
+  border: none;
+  width: 825px;
+  height: 50px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+#email2,
+#phone {
+  background-color: #d1d3db;
+  border: none;
+  width: 400px;
+  height: 50px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+.emaildata {
+  display: flex;
+  flex-direction: column;
+  margin-right: auto;
+}
+.phoneNumber {
+  display: flex;
+  flex-direction: column;
+}
+#message {
+  background-color: #d1d3db;
+
+  border: none;
+  margin-bottom: 20px;
+  margin-top: 20px;
+
+  font-family: "Roboto", sans-serif;
+  font-size: 13px;
+  padding: 20px;
+  width: 790px;
+  height: 250px;
+}
+#contactButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 825px;
+  background-color: #072ac8;
+  justify-items: center;
 }
 
 /* Versión mobile */
@@ -258,18 +492,13 @@ float:right;
     grid-template-columns: 1fr;
     text-align: center;
   }
-
-  .logos {
+  /* .logos {
     flex-direction: column;
-    
-  }
+  } */
 
-  .post-box-grid {
+  /* .post-box-grid {
     grid-template-columns: 1fr;
-   
-  
-  }
-
+  }  */
   .testimony {
     grid-template-columns: 1fr;
   }
@@ -284,5 +513,16 @@ float:right;
   }
   .emoji4 {
     display: none;
+  }
+
+  .logos img[alt="amazon"] {
+    grid-column: span 2;
+  }
+  footer{
+  flex-flow: column;
+  text-align: center;
+  }
+  div.menu-footer{
+    grid-template-columns: repeat(2, fr);
   }
 }
